docs: Add code review fix phases (10-14) to IMPLEMENTATION-PLAN.md
Add 5 new phases addressing all issues identified in CODE_REVIEW.md:
- Phase 10: Code quality & duplication fixes (wrong error messages, missing
  key validation, Rust unwrap() replacements)
- Phase 11: Build & configuration fixes (pom.xml mainClass, undefined
  Maven property, stale Cargo.lock, Java version alignment, JaCoCo)
- Phase 12: Documentation overhaul (README rewrite, Javadoc typos, fake
  GPG key, French error messages, missing CODE_OF_CONDUCT.md)
- Phase 13: Security hardening (package-private constructors, exception
  cause chaining, temp file permissions, native-access flag)
- Phase 14: Refactoring & deduplication (NativeHandle base class,
  KeyValidator, session version consolidation, Rust JNI helpers)

Includes a coverage matrix mapping every CODE_REVIEW.md finding to its
target phase and section.